@@ -1,5 +1,0 @@
-%ul.nav-left-list
-  - @grouped_events.keys.collect(&:split).group_by(&:last).each do |year, months|
-    %li.divider= year
-    - months.each do |month, year|
-      %li= link_to(month, "##{CGI.escape("#{month} #{year}")}")
