@@ -5,6 +5,7 @@
 * Schnelleres Laden der Seiten dank Turbolinks und Kompression.
 * Tooltips bei langen Gruppennamen.
 * Letzte bearbeitende Person von Anlässen wird gespeichert.
+* Top Level Menu 'Kurse' ist neu unter 'Anlässe' zu finden.
 
 == Version 1.9
 
